--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
       <section id="work">
         <h2>Animation Projects</h2>
         <div class="row">
+            <p>
+                Please click the "View" button to see the full posters and videos!
+            </p>
 
           <!-- La Mort N'existe Pas -->
           <article class="col-6 col-12-xsmall work-item">
@@ -74,7 +77,7 @@
             <a href="https://www.youtube.com/embed/NGmBiF12sOQ?rel=0&modestbranding=1&playsinline=1&autoplay=1"
                class="poptrox-seq" data-poptrox="iframe,1280x720"></a>
 
-            <h3>La Mort N'existe Pas (Open to View Video)</h3>
+            <h3>La Mort N'existe Pas</h3>
             <p><em>2D Animation, Shadows and Light.</em><br/>
               La Nort N'existe Pas is a 72 minute animated feature film directed by Félix Dufour-Laperrière. After a failed armed attack on wealthy landowners, Hélène flees into the forest and is haunted by Manon, her friend and accomplice. In a valley of metamorphoses and upheavals, Hélène must revisit her convictions, her choices, and their consequences.</p>
           </article>
@@ -87,7 +90,7 @@
             <a href="https://www.youtube.com/embed/xpBJMnozzqU?rel=0&modestbranding=1&playsinline=1&autoplay=1"
                class="poptrox-seq" data-poptrox="iframe,1280x720"></a>
 
-            <h3>Adam Change Lentement (Open to View Video)</h3>
+            <h3>Adam Change Lentement</h3>
             <p><em>Compositing work.</em><br/>
               Adam Change Lentement is a 96 minute animated feature film directed by Joël Vaudeuil. Adam is a 15-year-old whose body changes in response to teasing and negative comments. The summer his grandmother dies, he must navigate the torments of teenage life.</p>
           </article>
@@ -100,7 +103,7 @@
             <a href="https://www.youtube.com/embed/3Elme4wbrNg?rel=0&modestbranding=1&playsinline=1&autoplay=1"
                class="poptrox-seq" data-poptrox="iframe,1280x720"></a>
 
-            <h3>Fly Over Canada (Open to View Video)</h3>
+            <h3>Fly Over Canada</h3>
             <p><em>2D Animation Assistance.</em><br/>
               Fly Over Canada is an intro experience created by Moment Factory to build anticipation for Fly Over Canada's multi-sensory ride. Designed to complement the visually stunning main attraction without competing with it.</p>
           </article>
